@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-26T08:23:26Z",
-  "count_outdated" : 295,
-  "uniques_outdated" : 181,
-  "count" : 303,
-  "uniques" : 187,
+  "timestamp" : "2022-08-26T16:25:35Z",
+  "count_outdated" : 300,
+  "uniques_outdated" : 184,
+  "count" : 307,
+  "uniques" : 189,
   "clones" : [
-    {
-      "timestamp": "2022-08-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ]
-    },
     {
       "timestamp": "2022-08-15T00:00:00Z",
       "count": 3,
